# a2a-superhub

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  memory_foundation_baseline.py  retrieval_entry_spike.py
docs/: A2A_COMPATIBILITY.md  ADAPTERS.md  ADAPTER_AND_SKILL_EVIDENCE.md  API.md  ARTIFACTS_AND_DERIVATION.md  CONTRACT_AND_SECURITY_DECISIONS.md  CONTRACT_AND_SECURITY_EVIDENCE.md  DESIGN.md  DURABLE_MEMORY_EVIDENCE.md  HYBRID_RETRIEVAL_EVIDENCE.md  MCP_AGENT_INTEGRATION.md  MCP_AND_MULTI_RUNTIME_EVIDENCE.md  MEMORY_API.md  MEMORY_SECURITY.md  PACKAGING.md  PERFORMANCE_BASELINE.md  SECURITY.md  SHARING_AND_CONTEXT_EVIDENCE.md  index.html
docs/evidence/: adapter-agent-forward.json  retrieval-entry-local-jina-zh.json  retrieval-entry-local-minilm-rss.json  retrieval-entry-local-minilm.json  retrieval-entry-rss.json  retrieval-entry-server-minilm.json
docs/ext/shared-memory/: v1.md
docs/performance/: memory-foundation-baseline-linux.json  memory-foundation-baseline-windows.json
examples/agent-cards/: example-agent.json
ops-rules/: docs-and-website-update-guide.md
schemas/: agent-surface-v1.json  artifact-api-v1.schema.json  evidence-record-v1.schema.json  mcp-memory-v1.contract.json  memory-api-v1.schema.json  memory-note-v1.schema.json  package-extras-v1.json  principal-v1.schema.json  reference-adapter-v1.schema.json  retrieval-v1.json  skill-install-v1.schema.json
skills/operate-a2a-superhub/: SKILL.md
skills/operate-a2a-superhub/agents/: openai.yaml
skills/operate-a2a-superhub/references/: capabilities-and-versions.md  compatibility.json  security-and-approval.md  troubleshooting.md  workflows.md
skills/operate-a2a-superhub/scripts/: doctor.py  smoke.py
src/a2a_superhub/: __init__.py  adapter.py  artifacts.py  auth.py  cli.py  client.py  derivation.py  mcp_server.py  memory.py  models.py  parts.py  retrieval.py  server.py  skill_package.py  store.py
tests/: test_artifact_transport.py  test_cli.py  test_durable_memory.py  test_memory_benchmark.py  test_memory_client.py  test_memory_performance.py  test_memory_views.py  test_offline_inbox.py  test_reference_adapter.py  test_server.py  test_skill_installation.py  test_skill_scripts.py  test_store_and_artifacts.py  test_task_lifecycle_events.py  test_tasklog_sedimentation.py  test_wakeup_context.py
tests/contracts/: __init__.py  test_a2a_official_contract.py  test_adapter_skill_contract.py  test_contract_security_bundle.py  test_json_contracts.py  test_live_memory_http_contract.py  test_mcp_official_contract.py  test_mcp_runtime_contract.py  test_packaging_contract.py  test_security_matrix.py  test_skill_contract.py
tests/contracts/fixtures/a2a/: agent-card.json  send-message.json
tests/contracts/fixtures/api/: cases.json
tests/contracts/fixtures/evidence/: example.json
tests/contracts/fixtures/memory/: invalid-author-spoof.json  invalid-id.json  invalid-relation.json  valid-api-note.json  valid-filesystem-note.json  valid-profile.json  valid-task-log.json
tests/contracts/fixtures/paths/: cases.json
tests/contracts/fixtures/principal/: cases.json
tests/contracts/fixtures/security/: access-matrix.json
tests/retrieval/: test_evaluation_contract.py  test_provider.py
tests/retrieval/fixtures/: retrieval-eval-corpus.json  retrieval-eval-thresholds.json
tests/scenarios/: __init__.py  adapter_forward_actor.py  memory_kill_worker.py  test_adapter_e2e.py  test_artifact_http_e2e.py  test_contract_scenarios.py  test_hybrid_retrieval.py  test_inbox_kill_restart.py  test_mcp_multi_runtime.py  test_memory_kill_restart.py  test_memory_watcher.py  test_multimodal_derivation.py  test_watcher_security.py
tests/scenarios/fixtures/: cursor-ack.json  idempotency-conflict.json  note-write-crash.json  stale-index-authorization.json  wakeup-injection.json
(+1 files in other folders)
