[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-superhub"
version = "0.1.0"
description = "A small standalone hub for durable agent-to-agent task and artifact exchange."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "A2A Superhub contributors" }]
keywords = ["agents", "a2a", "mcp", "artifact", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = []

[project.optional-dependencies]
memory-core = [
  "PyYAML==6.0.3",
  "watchdog==6.0.0",
]
search = [
  "qdrant-client[fastembed]==1.18.0",
]
mcp = [
  "mcp==1.28.1",
]
derive = [
  "pypdf==6.6.1",
  "Pillow==12.2.0",
]
memory = [
  "PyYAML==6.0.3",
  "watchdog==6.0.0",
  "qdrant-client[fastembed]==1.18.0",
  "mcp==1.28.1",
  "pypdf==6.6.1",
  "Pillow==12.2.0",
]
contracts = [
  "a2a-sdk==1.1.1",
  "jsonschema==4.26.0",
  "mcp==1.28.1",
]

[project.scripts]
a2a-superhub = "a2a_superhub.cli:main"
a2a-superhub-mcp = "a2a_superhub.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
